[project]
name = "commodity-registry"
version = "0.2.0"
description = "Single source of truth for financial instrument data"
authors = [
    { name = "Roman Medvedev", email = "pypi@romavm.dev" }
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pydantic-market-data==0.1.17",
    "diskcache>=5.6.3",
    "platformdirs>=4.9.2",
    "pydantic-settings>=2.7.1",
    "py-ftmarkets>=0.1.5",
    "py-yfinance>=0.1.12",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/romamo/commodity-registry"
Repository = "https://github.com/romamo/commodity-registry"
Issues = "https://github.com/romamo/commodity-registry/issues"

[project.optional-dependencies]
providers = [
    "py-yfinance>=0.1.12",
    "py-ftmarkets>=0.1.2",
]

[project.scripts]
commodity-reg = "commodity_registry.cli:main"

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "mypy>=1.19.1",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.9.2",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commodity_registry"]

[tool.hatch.build.targets.sdist]
include = ["src/commodity_registry"]
exclude = [
    "/.github",
    "/.idea",
    "/tests",
    "/.mypy_cache",
    "/.pytest_cache",
    "/.ruff_cache",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

