[project]
name = "instrument-registry"
version = "0.2.4"
description = "Resolve and maintain canonical financial instrument records from ISINs, symbols, and names"
authors = [
    { name = "Roman Medvedev", email = "pypi@romavm.dev" }
]
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "finance",
    "instruments",
    "registry",
    "isin",
    "market-data",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pydantic-market-data>=0.2.0",
    "diskcache>=5.6.3",
    "platformdirs>=4.9.2",
    "agentyper==0.1.11",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/romamo/instrument-registry"
Repository = "https://github.com/romamo/instrument-registry"
Issues = "https://github.com/romamo/instrument-registry/issues"
Changelog = "https://github.com/romamo/instrument-registry/blob/main/CHANGELOG.md"

[project.optional-dependencies]
providers = [
    "py-yfinance>=0.1.14",
    "py-ftmarkets>=0.3.0",
]

[project.scripts]
instrument-reg = "instrument_registry.cli:main"

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "mypy>=1.19.1",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.9.2",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/instrument_registry"]

[tool.hatch.build.targets.sdist]
include = ["src/instrument_registry"]
exclude = [
    "/.github",
    "/.idea",
    "/tests",
    "/.mypy_cache",
    "/.pytest_cache",
    "/.ruff_cache",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
